--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <style>
+    .image-wrap img {
+        height: 300px;
+    }
+  </style>
   
   
 </head>
@@ -381,7 +385,7 @@
                         <p class="card-text mbr-fonts-style align-center display-7">Developed end-to-end industrial AI applications. Cofounded startup as technical lead and built backend architecture<br>With 99.2 in IITJEE &amp; Top rank in MS from USA &amp; B.Tech from IIT Kharagpur&nbsp;<br></p>
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="https://www.linkedin.com/in/priyankakamathskillexplorer/" target="_blank">
+                                <a href="https://www.linkedin.com/in/subhodip-saha-li/" target="_blank">
                                     <span class="mbr-iconfont socicon-linkedin socicon"></span>
                                 </a>
                             </div>
@@ -402,11 +406,11 @@
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Vivek Pagadala</strong></h5>
-                        <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>DevOps Engineer</strong><br><br><br>Clone.Code.Push in his&nbsp; DNA<br>Passionate DevOps Engineer started in&nbsp; a New-York Headquartered Multi National Company.<br>Lead deployments in Skill-Ex.<br><br></h6>
-                        <p class="card-text mbr-fonts-style align-center display-7">&nbsp;</p>
+                        <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>DevOps Engineer</strong><br><br>Clone.Code.Push in his&nbsp; DNA<br>Passionate DevOps Engineer started in&nbsp; a New-York Headquartered Multi National Company.<br>Lead deployments in Skill-Ex.<br><br></h6>
+                        <!-- <p class="card-text mbr-fonts-style align-center display-7">&nbsp;</p> -->
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="https://www.linkedin.com/in/astrobalaji/" target="_blank">
+                                <a href="https://www.linkedin.com/in/vivek-p-4a70a2246/" target="_blank">
                                     <span class="mbr-iconfont socicon-linkedin socicon"></span>
                                 </a>
                             </div>
@@ -431,7 +435,7 @@
                         <p class="card-text mbr-fonts-style align-center display-7">Design Wizard with trailblazing vision for&nbsp; out of the box conceptualization in front-end applications with expertise in&nbsp; multiple front-end technologies like Angular Js, Javascript &amp; Unity.</p>
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="https://www.linkedin.com/in/ashish-p-a6807122020/" target="_blank">
+                                <a href="https://www.linkedin.com/in/vp95/" target="_blank">
                                     <span class="mbr-iconfont socicon-linkedin socicon"></span>
                                 </a>
                             </div>
@@ -456,7 +460,7 @@
                         <p class="card-text mbr-fonts-style align-center display-7">Front-End Ninja with React JS expertise. Engineer Turned Entrepreneurs with MS in CS from California Chico'22. Built the entire front-end for Skill-Ex Recommendation Engine</p>
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="https://www.linkedin.com/in/caaishwaryaagarwal/" target="_blank">
+                                <a href="https://www.linkedin.com/in/abhinavreddy-dev/" target="_blank">
                                     <span class="mbr-iconfont socicon-linkedin socicon"></span>
                                 </a>
                             </div>
@@ -587,15 +591,15 @@
                     
                     
                 <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
+                        <a href="https://www.linkedin.com/company/workbucks" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.facebook.com/pages/Mobirise/1616226671953247" target="_blank">
+                        <a href="https://twitter.com/skillinator_exp" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
                         </a>
                     </div><div class="soc-item">
-                        <a href="https://www.youtube.com/c/mobirise" target="_blank">
+                        <a href="https://www.instagram.com/workbucks" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"></span>
                         </a>
                     </div></div>
@@ -607,8 +611,14 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2829851" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-maker.html">Free Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>  
-  
-  
+</section>
+<section class="display-7" id="hide-section" style="visibility: hiddem !important; background-color: black;padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2829851" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-maker.html">Free Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/theme/js/script.js"></script>
+  <script>
+
+   setTimeout(function(){
+    document.getElementById("hide-section").style.display = "none";
+   }, 300)
+
+  </script>
 </body>
 </html>
