Ashwini Added & Pics changed

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/img-478-598x1295.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/img-479-598x1295.jpeg" alt="Mobirise Website Builder">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -402,7 +402,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/whatsapp-image-2022-07-21-at-4.28.10-pm-1-518x689.jpeg" alt="Mobirise Website Builder">
+                        <img src="assets/images/vivek-1.jpeg" alt="Mobirise Website Builder">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Vivek Pagadala</strong></h5>
@@ -452,15 +452,15 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/abhinav-493x493.jpg" alt="Mobirise Website Builder">
+                        <img src="assets/images/aswini-518x518.jpg" alt="Mobirise Website Builder">
                     </div>
                     <div class="content-wrap">
-                        <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Abhinav Reddy&nbsp;</strong><br></h5>
-                        <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>Front End Expert</strong></h6>
-                        <p class="card-text mbr-fonts-style align-center display-7">Front-End Ninja with React JS expertise. Engineer Turned Entrepreneurs with MS in CS from California Chico'22. Built the entire front-end for Skill-Ex Recommendation Engine</p>
+                        <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Aswini Patro&nbsp;</strong><br></h5>
+                        <h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4"><strong>Student Influencer/Marketeer</strong></h6>
+                        <p class="card-text mbr-fonts-style align-center display-7">Trailblazing Entrepreneur at the age of 18, VP of Sports and Student Influencer with 6K+ following on LinkedIn. Expert at marketing strategies.</p>
                         <div class="social-row display-7">
                             <div class="soc-item">
-                                <a href="https://www.linkedin.com/in/abhinavreddy-dev/" target="_blank">
+                                <a href="https://www.linkedin.com/in/taswinipatro/" target="_blank">
                                     <span class="mbr-iconfont socicon-linkedin socicon"></span>
                                 </a>
                             </div>
