--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-2-695x528.jpg" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/mbr.jpg" alt="Mobirise Website Builder" title="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Players</strong></h5>
@@ -155,7 +155,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-695x528.jpg" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/mbr-816x544.jpg" alt="Mobirise Website Builder" title="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Builders</strong></h5>
@@ -168,7 +168,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-695x403.jpg" alt="Mobirise Website Builder" title="">
+                        <img src="assets/images/mbr-816x540.jpg" alt="Mobirise Website Builder" title="">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>Jobbers</strong></h5>
@@ -273,14 +273,13 @@
         <div class="row justify-content-center">
             <div class="col-12">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">
-                    <strong>Squad</strong>
                 </h3>
                 
             </div>
             <div class="col-sm-6 col-lg-3">
                 <div class="card-wrap">
                     <div class="image-wrap">
-                        <img src="assets/images/priyanka-598x598.jpg" alt="Mobirise Website Builder">
+                        <img src="assets/images/Priyanka1.jpeg" alt="Mobirise Website Builder">
                     </div>
                     <div class="content-wrap">
                         <h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5"><strong>Priyanka Kamath</strong></h5>
